language partially applied

--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
             <ul>
                 <li><a onclick="changeLanguage('en')" class="flag_global">Global</a></li>
                 <li><a onclick="changeLanguage('ko')" class="flag_korea">South Korea</a></li>
-                <li><a onclick="changeLanguage('zh')" class="flag_hongkong">HongKong</a></li>
                 <li><a onclick="changeLanguage('zh')" class="flag_china">China</a></li>
             </ul>
             <aside>
@@ -132,12 +131,14 @@
                 <li class="swiper-slide"><div>
                     <h2><span>Production</span></h2>
                     <h3>Entire Process</h3>
-                    <p>We work closely with you throughout the entire production process, from development to design, manufacturing, and packaging.</p>
+                    <p id="production_swiper_entire_process_p"></p>
+                    <!-- <p>We work closely with you throughout the entire production process, from development to design, manufacturing, and packaging.</p> -->
                 </div></li>
                 <li class="swiper-slide"><div>
                     <h2><span>Production</span></h2>
                     <h3>Experience</h3>
-                    <p>Our extensive experience in manufacturing a wide range of products will meet your needs, no matter what type of product your business deals with.</p>
+                    <p id="production_swiper_experience_p"></p>
+                    <!-- <p>Our extensive experience in manufacturing a wide range of products will meet your needs, no matter what type of product your business deals with.</p> -->
                 </div></li>
             </ul>
         </div>
@@ -151,11 +152,13 @@
             <ul class="swiper-wrapper">
                 <li class="swiper-slide"><div>
                     <h2><span>Logistics</span></h2>
-                    <p>Our team of import/export freight specialists ensures the safe and secure transportation of your valuable cargo, providing you with peace of mind and reliable service every step of the way.</p>
+                    <p id="logistics_swiper_slide_1_p"></p>
+                    <!-- <p>Our team of import/export freight specialists ensures the safe and secure transportation of your valuable cargo, providing you with peace of mind and reliable service every step of the way.</p> -->
                 </div></li>
                 <li class="swiper-slide"><div>
                     <h2><span>Logistics</span></h2>
-                    <p>We partner with local forwarding companies to deliver comprehensive international and domestic transportation solutions, including ocean freight, air freight, and ground trucking services.</p>
+                    <p id="logistics_swiper_slide_2_p"></p>
+                    <!-- <p>We partner with local forwarding companies to deliver comprehensive international and domestic transportation solutions, including ocean freight, air freight, and ground trucking services.</p> -->
                 </div></li>
             </ul>
         </div>
@@ -172,10 +175,11 @@
         <div class="fullfillment_new_inner" style="translate: none; rotate: none; scale: none; inset: 0px auto auto 0px; margin: 0px; max-width: 1500px; width: 1500px; max-height: 1260px; height: 1260px; padding: 0px; transform: translate(0px, 0px);">
             <header  class="mc_title_wrap">
                 <h2>3PL</h2>
-                <span>Fulfillment Service</span>
+                <span>Fulfillment Service1</span>
                 <dl>
                     <dt>3PL Benefits</dt>
-                    <dd>Third-Party Logistics (3PL) allows merchants of any size to scale more quickly by delegating the challenges of managing omnichannel fulfillment, inventory management, and post-purchase customer cycles.</dd>
+                    <dd id="fullfillment_new_3pl_benefits_dd"></dd>
+                    <!-- <dd>Third-Party Logistics (3PL) allows merchants of any size to scale more quickly by delegating the challenges of managing omnichannel fulfillment, inventory management, and post-purchase customer cycles.</dd> -->
                 </dl>
             </header>
             <footer  class="mc_title_wrap2">
@@ -183,44 +187,50 @@
                 <span>Fulfillment Service</span>
                 <dl>
                     <dt>3PL Benefits</dt>
-                    <dd>Third-Party Logistics (3PL) allows merchants of any size to scale more quickly by delegating the challenges of managing omnichannel fulfillment, inventory management, and post-purchase customer cycles.</dd>
+                    <dd id="fullfillment_new_3pl_benefits_dd"></dd>
+                    <!-- <dd>Third-Party Logistics (3PL) allows merchants of any size to scale more quickly by delegating the challenges of managing omnichannel fulfillment, inventory management, and post-purchase customer cycles.</dd> -->
                 </dl>
             </footer>
             <div class="fullfillment_new_container" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px);">
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
-                        ORDER FULFILLMENT
+                        <span id="fullfillment_new_fullfillment_span"></span>
                     </h3>
-                    <p>We handle all shipping and delivery so you can focus on sales and growth.</p>
+                    <p id="fullfillment_new_3pl_order_fullfillment_p"></p>
+                    <!-- <p>We handle all shipping and delivery so you can focus on sales and growth.</p> -->
                 </li>
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
-                        INTEGRATION
+                        <span id="fullfillment_new_integration_span"></span>
                     </h3>
-                    <p>Our fulfillment software seamlessly integrates with your sales channels to connect data such as orders, inventory, and more.</p>
+                    <p id="fullfillment_new_3pl_integration_p"></p>
+                    <!-- <p>Our fulfillment software seamlessly integrates with your sales channels to connect data such as orders, inventory, and more.</p> -->
                 </li>
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
-                        B2B FULFILLMENT
+                        <span id="fullfillment_new_b2b_fullfillment_span"></span>
                     </h3>
-                    <p>Our B2B fulfillment service helps you manage EDI-integrated retail orders as well as manual wholesale orders.</p>
+                    <p id="fullfillment_new_3pl_b2b_fullfillment_p"></p>
+                    <!-- <p>Our B2B fulfillment service helps you manage EDI-integrated retail orders as well as manual wholesale orders.</p> -->
                 </li>
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
-                        RETURNS & CUSTOMER SUPPORT
+                        <span id="fullfillment_new_returns_customer_support_span"></span>
                     </h3>
-                    <p>Dealing with customer inquiries and returned orders can be made easier and more cost effective with help of our dedicated customer support team.</p>
+                    <p id="fullfillment_new_3pl_returns_customer_support_p"></p>
+                    <!-- <p>Dealing with customer inquiries and returned orders can be made easier and more cost effective with help of our dedicated customer support team.</p> -->
                 </li>
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
-                        CUSTOM SHIPPING SUPPLIES
+                        <span id="fullfillment_new_custom_shipping_supplies_span"></span>
                     </h3>
-                    <p>Elevate your customer experience with personalized packaging featuring your brand logo. Our custom shipping supplies include branded shipping boxes, bubble mailers, and box tape, with the option to include your business card and promotional inserts.</p>
+                    <p id="fullfillment_new_3pl_customer_shipping_supplies_p"></p>
+                    <!-- <p>Elevate your customer experience with personalized packaging featuring your brand logo. Our custom shipping supplies include branded shipping boxes, bubble mailers, and box tape, with the option to include your business card and promotional inserts.</p> -->
                 </li>
             </div>
         </div>
@@ -234,7 +244,8 @@
             <span>Fulfillment Service</span>
             <dl>
                 <dt>3PL Benefits</dt>
-                <dd>Third-Party Logistics (3PL) allows merchants of any size to scale more quickly by delegating the challenges of managing omnichannel fulfillment, inventory management, and post-purchase customer cycles.</dd>
+                <dd id="fullfillment_new_3pl_benefits_dd"></dd>
+                <!-- <dd>Third-Party Logistics (3PL) allows merchants of any size to scale more quickly by delegating the challenges of managing omnichannel fulfillment, inventory management, and post-purchase customer cycles.</dd> -->
             </dl>
         </header>
         <div class="swiper">
@@ -244,35 +255,40 @@
                         <small>fullfillment</small>
                         ORDER FULFILLMENT
                     </h3>
-                    <p>We handle all shipping and delivery so you can focus on sales and growth.</p>
+                    <p id="fullfillment_new_3pl_order_fullfillment_p"></p>
+                    <!-- <p>We handle all shipping and delivery so you can focus on sales and growth.</p> -->
                 </li>
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
                         INTEGRATION
                     </h3>
-                    <p>Our fulfillment software seamlessly integrates with your sales channels to connect data such as orders, inventory, and more.</p>
+                    <p id="fullfillment_new_3pl_integration_p"></p>
+                    <!-- <p>Our fulfillment software seamlessly integrates with your sales channels to connect data such as orders, inventory, and more.</p> -->
                 </li>
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
                         B2B FULFILLMENT
                     </h3>
-                    <p>Our B2B fulfillment service helps you manage EDI-integrated retail orders as well as manual wholesale orders.</p>
+                    <p id="fullfillment_new_3pl_b2b_fullfillment_p"></p>
+                    <!-- <p>Our B2B fulfillment service helps you manage EDI-integrated retail orders as well as manual wholesale orders.</p> -->
                 </li>
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
                         RETURNS & CUSTOMER SUPPORT
                     </h3>
-                    <p>Dealing with customer inquiries and returned orders can be made easier and more cost effective with help of our dedicated customer support team.</p>
+                    <p id="fullfillment_new_3pl_returns_customer_support_p"></p>
+                    <!-- <p>Dealing with customer inquiries and returned orders can be made easier and more cost effective with help of our dedicated customer support team.</p> -->
                 </li>
                 <li class="swiper-slide">
                     <h3>
                         <small>fullfillment</small>
                         CUSTOM SHIPPING SUPPLIES
                     </h3>
-                    <p>Elevate your customer experience with personalized packaging featuring your brand logo. Our custom shipping supplies include branded shipping boxes, bubble mailers, and box tape, with the option to include your business card and promotional inserts.</p>
+                    <p id="fullfillment_new_3pl_customer_shipping_supplies_p"></p>
+                    <!-- <p>Elevate your customer experience with personalized packaging featuring your brand logo. Our custom shipping supplies include branded shipping boxes, bubble mailers, and box tape, with the option to include your business card and promotional inserts.</p> -->
                 </li>
             </ul>
             <div class="pagination3"></div>
@@ -283,7 +299,8 @@
             <span>Fulfillment Service</span>
             <dl>
                 <dt>3PL Benefits</dt>
-                <dd>Third-Party Logistics (3PL) allows merchants of any size to scale more quickly by delegating the challenges of managing omnichannel fulfillment, inventory management, and post-purchase customer cycles.</dd>
+                <dd id="fullfillment_new_3pl_benefits_dd"></dd>
+                <!-- <dd>Third-Party Logistics (3PL) allows merchants of any size to scale more quickly by delegating the challenges of managing omnichannel fulfillment, inventory management, and post-purchase customer cycles.</dd> -->
             </dl>
         </footer>
     </section>
@@ -293,32 +310,37 @@
     <section class="metrics">
         <header>
             <h2>Our Metrics Tell the Story</h2>
-            <p>Our metrics component gives you the inside scoop on your success and helps you stay on top of your game in style.</p>
+            <p id="metrics_our_metrics_tell_the_story_p"></p>
+            <!-- <p>Our metrics component gives you the inside scoop on your success and helps you stay on top of your game in style.</p> -->
         </header>
         <ul>
             <li>
                 <strong>3</strong>
                 <span>OFFICES</span>
                 <em>Global office network</em>
-                <p>Strategically positioned offices in the USA, China, and Korea to meet your needs and maximize cost-efficiency</p>
+                <p id="metrics_global_office_network_p"></p>
+                <!-- <p>Strategically positioned offices in the USA, China, and Korea to meet your needs and maximize cost-efficiency</p> -->
             </li>
             <li>
                 <strong>80</strong>
                 <span>MANPOWER</span>
                 <em>Teams of specialists</em>
-                <p>Experts in design, production, logistics, fulfillment, and software/web development working together to optimize workflow</p>
+                <p id="metrics_teams_of_specialists_p"></p>
+                <!-- <p>Experts in design, production, logistics, fulfillment, and software/web development working together to optimize workflow</p> -->
             </li>
             <li>
                 <strong>2013</strong>
                 <span>SINCE</span>
                 <em>Extensive experience &amp;<br>knowledge</em>
-                <p>Accumulated expertise and know-how from more than 10 years of experience</p>
+                <p id="metrics_extensive_experience_knowledge_p"></p>
+                <!-- <p>Accumulated expertise and know-how from more than 10 years of experience</p> -->
             </li>
             <li>
                 <strong>12,000</strong>
                 <span>PRODUCTS</span>
                 <em>A wide range of products</em>
-                <p>A diverse selection of high-quality products manufactured under our meticulous management and strong infrastructure</p>
+                <p id="metrics_a_wide_range_of_products_p"></p>
+                <!-- <p>A diverse selection of high-quality products manufactured under our meticulous management and strong infrastructure</p> -->
             </li>
         </ul>
     </section>
@@ -328,24 +350,29 @@
     <section class="wms" id="management">
         <header>
             <h2>WMS Software</h2>
-            <p>All-In-One Management System. <br>Our comprehensive management software enables you to oversee the entire process, <br>from manufacturing your products to fulfilling your orders.</p>
+            <p id="wms_software_p"></p>
+            <!-- <p>All-In-One Management System. <br>Our comprehensive management software enables you to oversee the entire process, <br>from manufacturing your products to fulfilling your orders.</p> -->
         </header>
         <div><ul>
             <li>
                 <em>production Management</em>
-                <p>From the early stage of product development, our software stores critical information to ensure the timely and quality production of your products.</p>
+                <p id="wms_production_management_p"></p>
+                <!-- <p>From the early stage of product development, our software stores critical information to ensure the timely and quality production of your products.</p> -->
             </li>
             <li>
                 <em>Inbound / Outbound Management</em>
-                <p>Our management system helps you track your products from the manufacturer to the warehouse and to the customers.</p>
+                <p id="wms_inbound_outbound_management_p"></p>
+                <!-- <p>Our management system helps you track your products from the manufacturer to the warehouse and to the customers.</p> -->
             </li>
             <li>
                 <em>Order / Inventory Management</em>
-                <p>Integrating our system with your marketplaces will expedite order fulfillment and minimize inventory errors.</p>
+                <p id="wms_order_inventory_management_p"></p>
+                <!-- <p>Integrating our system with your marketplaces will expedite order fulfillment and minimize inventory errors.</p> -->
             </li>
             <li>
                 <em>Reporting</em>
-                <p>Our management software collects, organizes, and carefully analyzes a wealth of data to generate comprehensive reports, providing valuable insights for assessing and enhancing your business operations.</p>
+                <p id="wms_reporting_p"></p>
+                <!-- <p>Our management software collects, organizes, and carefully analyzes a wealth of data to generate comprehensive reports, providing valuable insights for assessing and enhancing your business operations.</p> -->
             </li>
         </ul></div>
     </section>
@@ -374,7 +401,8 @@
         <header><div>
             <h2>Omnichannel Fulfillment Platform</h2>
             <em>Fulfillment Software Features</em>
-            <p>ARK empowers your brand to execute enterprise-class fulfillment operations.</p>
+            <p id="omnichannel_fullfillment_software_features_p"></p>
+            <!-- <p>ARK empowers your brand to execute enterprise-class fulfillment operations.</p> -->
             <div class="swiper thumb">
                 <ul class="swiper-wrapper">
                     <li class="swiper-slide"><img src="resources/images/omnichannel1.jpg"></li>
@@ -396,6 +424,7 @@
         <header>
             <h2>ARK Services</h2>
             <em>4-in-1 Cloud-Based Software</em>
+            <p id="services_4_in_1_cloud_based_software_p"></p>
             <p>3PL Partners Can Provide All of the Following:</p>
         </header>
         <div class="swiper">
