Before how it works start.

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             <aside>
                 <button type="button" onclick="$(this).next('ul').slideToggle('fast')" class="flag_global">Choose Country</button>
                 <ul style="display: none;">
-                    <li><a href="" class="flag_korea">South Korea</a></li>
-                    <li><a href="" class="flag_hongkong">Hongkong</a></li>
-                    <li><a href="" class="flag_china">China</a></li>
+                    <li><a onclick="changeLanguage('en')" class="flag_korea">Global</a></li>
+                    <li><a onclick="changeLanguage('ko')" class="flag_hongkong">South Korea</a></li>
+                    <li><a onclick="changeLanguage('zh')" class="flag_china">China</a></li>
                 </ul>
             </aside>
             <nav>
@@ -405,15 +405,17 @@
             <!-- <p>ARK empowers your brand to execute enterprise-class fulfillment operations.</p> -->
             <div class="swiper thumb">
                 <ul class="swiper-wrapper">
-                    <li class="swiper-slide"><img src="resources/images/omnichannel1.jpg"></li>
-                    <li class="swiper-slide"><img src="resources/images/omnichannel2.jpg"></li>
+                    <li class="swiper-slide"><div></li>
+                    <li class="swiper-slide"><div></li>
+                    <li class="swiper-slide"><div></li>
                 </ul>
             </div>
         </div></header>
         <div class="swiper big">
             <ul class="swiper-wrapper">
-                <li class="swiper-slide"><img src="resources/images/omnichannel1.jpg"></li>
-                <li class="swiper-slide"><img src="resources/images/omnichannel2.jpg"></li>
+                <li class="swiper-slide"><div></li>
+                <li class="swiper-slide"><div></li>
+                <li class="swiper-slide"><div></li>
             </ul>
         </div>
     </section>
