--- a/index.html
+++ b/index.html
@@ -152,11 +152,13 @@
             <ul class="swiper-wrapper">
                 <li class="swiper-slide"><div>
                     <h2><span>Logistics</span></h2>
+                    <h3><span>Freight Forwarding</span></h3>
                     <p id="logistics_swiper_slide_1_p"></p>
                     <!-- <p>Our team of import/export freight specialists ensures the safe and secure transportation of your valuable cargo, providing you with peace of mind and reliable service every step of the way.</p> -->
                 </div></li>
                 <li class="swiper-slide"><div>
                     <h2><span>Logistics</span></h2>
+                    <h3><span>Ocean, Air, Ground</span></h3>
                     <p id="logistics_swiper_slide_2_p"></p>
                     <!-- <p>We partner with local forwarding companies to deliver comprehensive international and domestic transportation solutions, including ocean freight, air freight, and ground trucking services.</p> -->
                 </div></li>
