cursor color, 3PL transparent background, minor bug fix

--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                     <!-- <dd>Third-Party Logistics (3PL) allows merchants of any size to scale more quickly by delegating the challenges of managing omnichannel fulfillment, inventory management, and post-purchase customer cycles.</dd> -->
                 </dl>
             </footer>
+            
             <div class="fullfillment_new_container" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px);">
                 <li class="swiper-slide">
                     <h3>
@@ -304,6 +305,7 @@
                     <!-- <p>Elevate your customer experience with personalized packaging featuring your brand logo. Our custom shipping supplies include branded shipping boxes, bubble mailers, and box tape, with the option to include your business card and promotional inserts.</p> -->
                 </li>
             </div>
+            
         </div>
     </div>
     <!-- //Fullfillment bug fixed for wide only -->
@@ -455,8 +457,8 @@
         <ul>
             <li class="sm">SM Entertainment</li>
             <li class="kakao">Kakao Entertainment</li>
-            <li class="forever21">Forever21</li>
-            <li class="nova">Fashion Nova</li>
+            <li class="logo82">Forever21</li>
+            <li class="target">Fashion Nova</li>
             <li class="nordstrom">Nordstrom</li>
             <li class="beneton">United colors of Beneton.</li>
             <li class="prediction">Prediction</li>
