language menu updated

--- a/index.html
+++ b/index.html
@@ -665,6 +665,15 @@
                 },
                 reachBeginning: function() {
                     setTimeout(function () {
+                        //show_image(1);
+                        //console.log('reach begin');
+                        //swiper_howitworks.params.touchReleaseOnEdges = true;
+                        //swiper_howitworks.params.mousewheel.releaseOnEdges = true;
+                    }, 500);
+                },
+                init: function() {
+                    setTimeout(function () {
+                        show_image(1);
                         //console.log('reach begin');
                         //swiper_howitworks.params.touchReleaseOnEdges = true;
                         //swiper_howitworks.params.mousewheel.releaseOnEdges = true;
